# Differential-Drive-Path-Planning-and-Navigation

./: .gitignore  README.md  publish_waypoints.py
archive /: a_star_planner.hpp  a_star_planner.py  a_star_planner_optimized.py  bfs_planner.py  dijkstra_planner.cpp  dijkstra_planner.hpp  dijkstra_planner.py  dijkstra_planner_optimized.py
bumperbot_bringup/: README.md  package.xml
bumperbot_bringup/launch/: bumperbot.launch.py
bumperbot_controller/: CMakeLists.txt  README.md  package.xml
bumperbot_controller/bumperbot_controller/: simple_controller.py  twist_relay.py
bumperbot_controller/config/: joy_teleop.yaml  twist_mux_topics.yaml
bumperbot_controller/launch/: controller.launch.py  joystick_teleop.launch.py
bumperbot_controller/src/: simple_controller.cpp  twist_relay.cpp
bumperbot_cpp_examples/: README.md
bumperbot_description/: CMakeLists.txt  README.md  package.xml
bumperbot_description/launch/: display.launch.py  gazebo.launch.py
bumperbot_description/models/actor/: model.config  model.sdf
bumperbot_description/rviz/: bumperbot.rviz
bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_gazebo.xacro  bumperbot_ros2_control.xacro
bumperbot_description/worlds/: dynamic_warehouse.world  small_warehouse.world
bumperbot_localization/: CMakeLists.txt  README.md  package.xml
bumperbot_localization/bumperbot_localization/: imu_republisher.py  kalman_filter.py  odometry_motion_model.py
bumperbot_localization/config/: amcl.yaml
bumperbot_localization/launch/: global_localization.launch.py  local_localization.launch.py
bumperbot_localization/src/: imu_republisher.cpp  kalman_filter.cpp
bumperbot_mapping/: CMakeLists.txt  README.md  package.xml
bumperbot_mapping/bumperbot_mapping/: mapping_with_known_poses.py
bumperbot_mapping/config/: slam_toolbox.yaml
bumperbot_mapping/launch/: slam.launch.py
bumperbot_mapping/maps/dynamic_warehouse/: map.pgm  map.yaml  (+2 more)
bumperbot_motion/: CMakeLists.txt  package.xml
bumperbot_motion/bumperbot_motion/: collision_monitor.py  dwb_motion_planner.py  pd_motion_planner.py  pure_pursuit_motion_planner.py
bumperbot_motion/launch/: collision_monitor.launch.py  motion.launch.py
bumperbot_msgs/: CMakeLists.txt  README.md  package.xml
bumperbot_msgs/action/: FollowPath.action  GetPath.action
bumperbot_msgs/msg/: CollisionState.msg  GoalReached.msg
bumperbot_navigation/: CMakeLists.txt  package.xml
bumperbot_navigation/config/: costmap.yaml
bumperbot_navigation/launch/: navigation.launch.py
bumperbot_planning/: CMakeLists.txt  package.xml
bumperbot_planning/bumperbot_planning/: a_star_planner.py  bfs_planner.py  dijkstra_planner.py  global_planner.py  graph_node.py  navigation_manager.py
bumperbot_planning/bumperbot_planning/planners/: a_star.py  dijkstra.py  planner_base.py
bumperbot_planning/include/bumperbot_planning/: graph_node.hpp
bumperbot_planning/launch/: planning.launch.py
bumperbot_planning/rviz/: mapping.rviz
bumperbot_planning/src/: a_star_planner.cpp
bumperbot_py_examples/: README.md  setup.py
bumperbot_py_examples/bumperbot_py_examples/: simple_qos_publisher.py  simple_qos_subscriber.py
bumperbot_utils/: CMakeLists.txt  README.md
bumperbot_utils/bumperbot_utils/: safety_stop.py
(+3 files in other folders)
